--- a/API/Frontend_Project/Pages/Haandvaerker/Create.cshtml
+++ b/API/Frontend_Project/Pages/Haandvaerker/Create.cshtml
@@ -5,13 +5,41 @@
     ViewData["Title"] = "Tilføj Håndværker";
 }
 
-<h1> Tilføj Håndværker</h1>
-<form method="post">
-    <input type="text" asp-for="LocalModel.Fornavn"/>
-    <input type="text" asp-for="LocalModel.Efternavn"/>
-    <input type="datetime" asp-for="LocalModel.Ansættelsesdato"/>
-    <input type="text" asp-for="LocalModel.Fagområde"/>
-    <input type="number" asp-for="LocalModel.ID"/>
-    
-    <button type="submit" >Submit</button>
-</form>
+<div>
+    <h1> Tilføj Håndværker</h1>
+    <hr />
+    <div class="row">
+        <div class="col-md-2">
+            <form method="post">
+                <div class="form-group">
+                
+                    <label for="Fornavn" class="control-label">Fornavn</label>
+                    
+                    <input type="text" asp-for="LocalModel.Fornavn" />
+                </div>
+                <div class="form-group">
+                    <label for="Efternavn" class="control-label">Efternavn</label>
+                    <input type="text" asp-for="LocalModel.Efternavn" />
+                </div>
+                <div class="form-group">
+                    <label for="Ansættelsesdato" class="control-label">Ansættelsesdato</label>
+                    <input type="datetime" asp-for="LocalModel.Ansættelsesdato" />
+                </div>
+                <div class="form-group">
+                    <label for="Fagområde" class="control-label">Fagområde</label>
+                    <input type="text" asp-for="LocalModel.Fagområde" />
+                </div>
+                <div class="form-group">
+                    <label for="ID" class="control-label">ID</label>
+                    <input type="number" asp-for="LocalModel.ID" />
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary shadow">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div>
+        <a class="btn btn-secondary" asp-page="/Haandvaerker/Index">Tilbage</a>
+    </div>
+</div>
