--- a/API/Frontend_Project/Pages/Haandvaerker/Index.cshtml
+++ b/API/Frontend_Project/Pages/Haandvaerker/Index.cshtml
@@ -1,4 +1,67 @@
 ﻿@page
 @model Frontend_Project.Pages.Haandvaerker.IndexModel
 @{
+    ViewData["Title"] = "Håndværker oversigt";
 }
+
+<div class="row">
+    <div class="col-4 col-sm-4 col-lg-4 col-xl-4 col-md-4 p-5">
+        <div id="orderheadline">
+            <h1>Oversigt over håndværkere</h1>
+
+            <p>
+                <a class="btn btn-secondary shadow" asp-page="/Haandvaerker/Create">Create New</a>
+            </p>
+        </div>
+    </div>
+    <div class="col col-sm col-lg col-xl col-md p-5">
+        <table class="table table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <th>
+                        Fornavn
+                    </th>
+                    <th>
+                        Efternavn
+                    </th>
+                    <th>
+                        Ansættelsesdato
+                    </th>
+                    <th>
+                        Fagområde
+                    </th>
+                    <th>
+                        ID
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.LocalModels)
+                {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Fornavn)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Efternavn)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Ansættelsesdato)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Fagområde)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ID)
+                    </td>
+                    <td>
+                        <a class="btn btn-secondary shadow" asp-page="/Haandvaerker/Details" asp-route-id="@item.ID">Choose</a>
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
+
+    </div>
+</div>
