--- a/API/Frontend_Project/Pages/Haandvaerker/Delete.cshtml
+++ b/API/Frontend_Project/Pages/Haandvaerker/Delete.cshtml
@@ -8,29 +8,30 @@
 <h1>Sletning</h1>
 
 <div>
-    <h4>Er du sikker på at du vil slsette Håndværkeren @Model.localModel.Fornavn</h4>
+    <h4>Er du sikker på at du vil slsette Håndværkeren @Model.localModel.Fornavn ?</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.localModel.Fornavn)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.localModel.Efternavn)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.localModel.Ansættelsesdato)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.localModel.Fagområde)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.localModel.ID)
-        </dt>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.localModel.Vaerktoejskasse.id)
-        </dt>
-    </dl>
-</div>
-<div>
-    <button class="btn btn-info" onclick=""></button>
+    <form method="post">
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.localModel.Fornavn)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.localModel.Efternavn)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.localModel.Ansættelsesdato)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.localModel.Fagområde)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.localModel.ID)
+            </dt>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.localModel.Vaerktoejskasse.id)
+            </dt>
+        </dl>
+        <button class="btn btn-info" type="submit">Ja</button>
+        <button class="btn btn-info" asp-page="/Haandvaerker/Details" asp-route-id="@Model.localModel.ID">Nej</button>
+    </form>
 </div>
