--- a/API/Frontend_Project/Pages/Shared/_Layout.cshtml
+++ b/API/Frontend_Project/Pages/Shared/_Layout.cshtml
@@ -22,10 +22,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Haandvaerker/Index">Håndværker</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Haandvaerker/Index">Håndværker</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/VaerktoejsKasse/Index">Værktøjskasse</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Vaerktoej/Index">Værktøj</a>
                         </li>
                     </ul>
                 </div>
