--- a/API/Frontend_Project/Pages/Haandvaerker/Create.cshtml
+++ b/API/Frontend_Project/Pages/Haandvaerker/Create.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Tilføj Håndværker";
 }
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <div>
     <h1> Tilføj Håndværker</h1>
@@ -15,23 +16,23 @@
                 
                     <label for="Fornavn" class="control-label">Fornavn</label>
                     
-                    <input type="text" asp-for="LocalModel.Fornavn" />
+                    <input type="text" asp-for="LocalModel.HVFornavn" />
                 </div>
                 <div class="form-group">
                     <label for="Efternavn" class="control-label">Efternavn</label>
-                    <input type="text" asp-for="LocalModel.Efternavn" />
+                    <input type="text" asp-for="LocalModel.HVEfternavn" />
                 </div>
                 <div class="form-group">
                     <label for="Ansættelsesdato" class="control-label">Ansættelsesdato</label>
-                    <input type="datetime" asp-for="LocalModel.Ansættelsesdato" />
+                    <input type="datetime" asp-for="LocalModel.HVAnsaettelsedato" />
                 </div>
                 <div class="form-group">
                     <label for="Fagområde" class="control-label">Fagområde</label>
-                    <input type="text" asp-for="LocalModel.Fagområde" />
+                    <input type="text" asp-for="LocalModel.HVFagomraade"/>
                 </div>
                 <div class="form-group">
                     <label for="ID" class="control-label">ID</label>
-                    <input type="number" asp-for="LocalModel.ID" />
+                    <input type="number" asp-for="LocalModel.HaandvaerkerId" />
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary shadow">Submit</button>
