--- a/API/Frontend_Project/Pages/Haandvaerker/Delete.cshtml
+++ b/API/Frontend_Project/Pages/Haandvaerker/Delete.cshtml
@@ -8,30 +8,28 @@
 <h1>Sletning</h1>
 
 <div>
-    <h4>Er du sikker på at du vil slsette Håndværkeren @Model.localModel.Fornavn ?</h4>
+    <h4>Er du sikker på at du vil slsette Håndværkeren @Model.localModel.HVFornavn ?</h4>
     <hr />
     <form method="post">
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Fornavn)
+                @Html.DisplayNameFor(model => model.localModel.HVFornavn)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.Efternavn)
+                @Html.DisplayFor(model => model.localModel.HVEfternavn)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Ansættelsesdato)
+                @Html.DisplayNameFor(model => model.localModel.HVAnsaettelsedato)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.Fagområde)
+                @Html.DisplayFor(model => model.localModel.HVFagomraade)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.ID)
+                @Html.DisplayNameFor(model => model.localModel.HaandvaerkerId)
             </dt>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Vaerktoejskasse.id)
-            </dt>
+
         </dl>
         <button class="btn btn-info" type="submit">Ja</button>
-        <button class="btn btn-info" asp-page="/Haandvaerker/Details" asp-route-id="@Model.localModel.ID">Nej</button>
+        <button class="btn btn-info" asp-page="/Haandvaerker/Details" asp-route-id="@Model.localModel.HaandvaerkerId">Nej</button>
     </form>
 </div>
