--- a/API/Frontend_Project/Pages/Haandvaerker/Details.cshtml
+++ b/API/Frontend_Project/Pages/Haandvaerker/Details.cshtml
@@ -9,31 +9,31 @@
     <h1>Details</h1>
 
     <div>
-        <h4>Håndværkeren @Model.localModel.Fornavn</h4>
+        <h4>Håndværkeren @Model.localModel.HVFornavn</h4>
         <hr />
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Fornavn)
+        <dl class="col">
+            <dt class="row">
+                @Html.DisplayNameFor(model => model.localModel.HVFornavn)
             </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.Efternavn)
+            <dd class="row">
+                @Html.DisplayFor(model => model.localModel.HVEfternavn)
             </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Ansættelsesdato)
+            <dt class="row">
+                @Html.DisplayNameFor(model => model.localModel.HVAnsaettelsedato)
             </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.Fagområde)
+            <dd class="row">
+                @Html.DisplayFor(model => model.localModel.HVFagomraade)
             </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.ID)
+            <dt class="row">
+                @Html.DisplayNameFor(model => model.localModel.HaandvaerkerId)
             </dt>
-            <dt class="col-sm-2">
+            @*<dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.localModel.Vaerktoejskasse.id)
-            </dt>
+            </dt>*@
         </dl>
     </div>
     <div>
-    <a class="btn btn-info" asp-route="/Haandvaerker/Edit" asp-route-id="@Model.localModel.ID">Edit</a>
-    <a class="btn btn-primary" asp-route="/Haandvaerker/Edit" asp-route-id="@Model.localModel.ID">Delete</a>
-    <a asp-page="/Index">Back to List</a>
+    <a class="btn btn-info" asp-page="/Haandvaerker/Edit" asp-route-id="@Model.localModel.HaandvaerkerId">Edit</a>
+    <a class="btn btn-primary" asp-page="/Haandvaerker/Delete" asp-route-id="@Model.localModel.HaandvaerkerId">Delete</a>
+    <a asp-page="/Haandvaerker/Index">Back to List</a>
 </div>
