--- a/API/Frontend_Project/Pages/Vaerktoej/Create.cshtml
+++ b/API/Frontend_Project/Pages/Vaerktoej/Create.cshtml
@@ -14,31 +14,31 @@
                 <div class="form-group">
 
                     <label for="id" class="control-label">ID</label>
-                    <input type="text" asp-for="LocalModel.id" />
+                    <input type="text" asp-for="LocalModel.VTId" />
                 </div>
                 <div class="form-group">
                     <label for="Fabrikat" class="control-label">Fabrikat</label>
-                    <input type="text" asp-for="LocalModel.Fabrikat" />
+                    <input type="text" asp-for="LocalModel.VTFabrikat" />
                 </div>
                 <div class="form-group">
                     <label for="Model" class="control-label">Model</label>
-                    <input type="text" asp-for="LocalModel.Model" />
+                    <input type="text" asp-for="LocalModel.VTModel" />
                 </div>
                 <div class="form-group">
                     <label for="Serienummer" class="control-label">SerieNummer</label>
-                    <input type="number" asp-for="LocalModel.SerieNummer" />
+                    <input type="number" asp-for="LocalModel.VTSerienr" />
                 </div>
                 <div class="form-group">
                     <label for="Type" class="control-label">Type</label>
-                    <input type="text" asp-for="LocalModel.Type" />
+                    <input type="text" asp-for="LocalModel.VTType" />
                 </div>
                 <div class="form-group">
                     <label for="Anskaffet" class="control-label">Anskaffet</label>
-                    <input type="datetime" asp-for="LocalModel.Anskaffet" />
+                    <input type="datetime" asp-for="LocalModel.VTAnskaffet" />
                 </div>
                 <div class="form-group">
                     <label for="LiggeriVKT" class="control-label">Tilhører værktøjskasse</label>
-                    <input type="text" asp-for="LocalModel.LiggerIVTK" />
+                    <input type="text" asp-for="LocalModel.LiggerIvtk" />
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary shadow">Submit</button>
