--- a/API/Frontend_Project/Pages/Vaerktoej/Delete.cshtml
+++ b/API/Frontend_Project/Pages/Vaerktoej/Delete.cshtml
@@ -8,33 +8,33 @@
 <h1>Sletning</h1>
 
 <div>
-    <h4>Er du sikker på at du vil slsette værktøjet @Model.localModel.id ?</h4>
+    <h4>Er du sikker på at du vil slsette værktøjet @Model.localModel.VTId ?</h4>
     <hr />
     <form method="post">
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.id)
+                @Html.DisplayNameFor(model => model.localModel.VTId)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.Fabrikat)
+                @Html.DisplayFor(model => model.localModel.VTFabrikat)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Model)
+                @Html.DisplayNameFor(model => model.localModel.VTModel)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.SerieNummer)
+                @Html.DisplayFor(model => model.localModel.VTSerienr)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Type)
+                @Html.DisplayNameFor(model => model.localModel.VTType)
             </dt>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Anskaffet)
+                @Html.DisplayNameFor(model => model.localModel.VTAnskaffet)
             </dt>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.LiggerIVTK)
+                @Html.DisplayNameFor(model => model.localModel.LiggerIvtk)
             </dt>
         </dl>
         <button class="btn btn-info" type="submit">Ja</button>
-        <button class="btn btn-info" asp-page="/Vaerktoej/Details" asp-route-id="@Model.localModel.id">Nej</button>
+        <button class="btn btn-info" asp-page="/Vaerktoej/Details" asp-route-id="@Model.localModel.VTId">Nej</button>
     </form>
 </div>
