--- a/API/Frontend_Project/Pages/Vaerktoej/Details.cshtml
+++ b/API/Frontend_Project/Pages/Vaerktoej/Details.cshtml
@@ -9,34 +9,34 @@
     <h1>Details</h1>
 
     <div>
-        <h4>Værktøj @Model.localModel.id</h4>
+        <h4>Værktøj @Model.localModel.VTId</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.id)
+                @Html.DisplayNameFor(model => model.localModel.VTId)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.Fabrikat)
+                @Html.DisplayFor(model => model.localModel.VTFabrikat)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Model)
+                @Html.DisplayNameFor(model => model.localModel.VTModel)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.SerieNummer)
+                @Html.DisplayFor(model => model.localModel.VTSerienr)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Type)
+                @Html.DisplayNameFor(model => model.localModel.VTType)
             </dt>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Anskaffet)
+                @Html.DisplayNameFor(model => model.localModel.VTAnskaffet)
             </dt>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.LiggerIVTK)
+                @Html.DisplayNameFor(model => model.localModel.LiggerIvtk)
             </dt>
         </dl>
     </div>
     <div>
-    <a class="btn btn-info" asp-route="/Vaerktoej/Edit" asp-route-id="@Model.localModel.id">Edit</a>
-    <a class="btn btn-primary" asp-route="/Vaerktoej/Edit" asp-route-id="@Model.localModel.id">Delete</a>
-    <a asp-page="/Index">Tilbage</a>
+    <a class="btn btn-info" asp-route="/Vaerktoej/Edit" asp-route-id="@Model.localModel.VTId">Edit</a>
+    <a class="btn btn-primary" asp-route="/Vaerktoej/Delete" asp-route-id="@Model.localModel.VTId">Delete</a>
+    <a asp-page="Vaerktoej/Index">Tilbage</a>
 </div>
