--- a/API/Frontend_Project/Pages/VaerktoejsKasse/Details.cshtml
+++ b/API/Frontend_Project/Pages/VaerktoejsKasse/Details.cshtml
@@ -7,34 +7,35 @@
     <h1>Details</h1>
 
     <div>
-        <h4>Værktøjskassen @Model.localModel.id</h4>
+        <h4>Værktøjskassen @Model.localModel.VTKId</h4>
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.id)
+                @Html.DisplayNameFor(model => model.localModel.VTKId)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.Model)
+                @Html.DisplayFor(model => model.localModel.VTKModel)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Fabrikant)
+                @Html.DisplayNameFor(model => model.localModel.VTKFabrikat)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.localModel.Farve)
+                @Html.DisplayFor(model => model.localModel.VTKFarve)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.Anskaffet)
+                @Html.DisplayNameFor(model => model.localModel.VTKAnskaffet)
             </dt>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.EjesAF.ID)
+                @Html.DisplayNameFor(model => model.localModel.VTKSerienummer)
             </dt>
+
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.localModel.EjesAF.ID)
+                @Html.DisplayNameFor(model => model.localModel.VTKEjesAf)
             </dt>
         </dl>
     </div>
     <div>
-    <a class="btn btn-info" asp-route="/VaerktoejsKasse/Edit" asp-route-id="@Model.localModel.id">Edit</a>
-    <a class="btn btn-primary" asp-route="/VaerktoejsKasse/Edit" asp-route-id="@Model.localModel.id">Delete</a>
+    <a class="btn btn-info" asp-route="/VaerktoejsKasse/Edit" asp-route-id="@Model.localModel.VTKId">Edit</a>
+    <a class="btn btn-primary" asp-route="/VaerktoejsKasse/Delete" asp-route-id="@Model.localModel.VTKId">Delete</a>
     <a asp-page="/Index">Back to List</a>
 </div>
