--- a/API/Frontend_Project/Pages/VaerktoejsKasse/Edit.cshtml
+++ b/API/Frontend_Project/Pages/VaerktoejsKasse/Edit.cshtml
@@ -13,29 +13,33 @@
                 <div class="form-group">
 
                     <label for="id" class="control-label">ID</label>
-                    <input type="number" asp-for="LocalModel.id" placeholder="@Model.LocalModel.id" />
+                    <input type="number" asp-for="LocalModel.VTKId" placeholder="@Model.LocalModel.VTKId" />
                 </div>
                 <div class="form-group">
                     <label for="Model" class="control-label">Model</label>
-                    <input type="text" asp-for="LocalModel.Model" placeholder="@Model.LocalModel.Model" />
+                    <input type="text" asp-for="LocalModel.VTKModel" placeholder="@Model.LocalModel.VTKModel" />
                 </div>
                 <div class="form-group">
                     <label for="Fabrikant" class="control-label">Fabrikant</label>
-                    <input type="text" asp-for="LocalModel.Fabrikant" placeholder="@Model.LocalModel.Fabrikant" />
+                    <input type="text" asp-for="LocalModel.VTKFabrikat" placeholder="@Model.LocalModel.VTKFabrikat" />
                 </div>
                 <div class="form-group">
                     <label for="Farve" class="control-label">Farve</label>
-                    <input type="text" asp-for="LocalModel.Farve" placeholder="@Model.LocalModel.Farve" />
+                    <input type="text" asp-for="LocalModel.VTKFarve" placeholder="@Model.LocalModel.VTKFarve" />
+                </div>
+                <div class="form-group">
+                    <label for="Serienunmmer" class="control-label">Serienunmmer</label>
+                    <input type="text" asp-for="LocalModel.VTKSerienummer" placeholder="@Model.LocalModel.VTKSerienummer" />
                 </div>
                 <div class="form-group">
                     <label for="Anskaffet" class="control-label">Anskaffet</label>
-                    <input type="datetime" asp-for="LocalModel.Anskaffet" placeholder="@Model.LocalModel.Anskaffet" />
+                    <input type="datetime" asp-for="LocalModel.VTKAnskaffet" placeholder="@Model.LocalModel.VTKAnskaffet" />
                 </div>
                 <div class="form-group">
                     <label for="EjesAF" class="control-label">Ejes af</label>
-                    <input type="number" asp-for="LocalModel.EjesAF.ID" placeholder="@Model.LocalModel.EjesAF.ID" />
+                    <input type="number" asp-for="LocalModel.VTKEjesAf" placeholder="@Model.LocalModel.VTKEjesAf" />
                 </div>
-                
+
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary shadow">Submit</button>
                 </div>
@@ -43,6 +47,6 @@
         </div>
     </div>
     <div>
-        <a class="btn btn-secondary" asp-page="/VaerktoejsKasse/Details" asp-route-id="LocalModel.id">Tilbage</a>
+        <a class="btn btn-secondary" asp-page="/VaerktoejsKasse/Details" asp-route-id="LocalModel.VTKId">Tilbage</a>
     </div>
 </div>
